# IntraExchangeTriangularArbitrage

./: .env.example  Dockerfile  Makefile  README.md  debug.py  docker-compose.yml  pyproject.toml
scripts/: dev_up.sh  format.sh  lint.sh  migrate.sh
tests/: conftest.py  test_executor.py  test_orderbook.py  test_signals.py  test_triangle_math.py
triarb/: config.py  logging.py  main.py
triarb/api/: routes.py  server.py
triarb/data/: redis_state.py
triarb/engine/: executor.py  fees.py  inventory.py  risk.py  signals.py  simulator.py  triangle.py
triarb/exchange/: base.py  binance.py  symbolmap.py
triarb/marketdata/: aggregator.py  orderbook.py  ws_client.py
triarb/utils/: math.py  retry.py  time.py
